# gates_of_skeldal

./: .gitignore  CMakeLists.txt  LICENSE  LOGO00.PCX  LOGO01.PCX  LZWC.C  LZWC.H  POKUSSCR.C  README.md  Skeldal.sln  Skeldal.vcproj  StdAfx.cpp  StdAfx.h  addonKouzla.odt  crashdump.cpp  crashdump.h  cztable.cpp  cztable.h  extras.h  mapedit.cpp  mapedit.vcproj  skeldal.ini  version.in.h
3DTEST/: TEXTURAA.ASM
AdvMan/: AdvMan.cpp  AdvMan.h  AdvMan.rc  AdvMan.sln  AdvMan.vcproj  ChildView.cpp  ChildView.h  DlgDialogy.cpp  DlgDialogy.h  DlgNoveDobr.cpp  DlgNoveDobr.h  DlgNovyDialog.cpp  DlgNovyDialog.h  MainFrm.cpp  MainFrm.h  Pathname.cpp  Pathname.h  StdAfx.cpp  StdAfx.h  mem.h  resource.h  skeldal_win.h
AdvMan/res/: AdvMan.rc2
DDLReader/: DDLFile.cpp  DDLFile.h  DDLReader.h  DDLReader.rc  DDLReader.vcproj  DDLReaderDlg.h  DlgProgress.h  IWStringEffect.h  StdAfx.h  WPathname.cpp  WPathname.h  WString.cpp  WString.h  WStringMemory.cpp  WStringProxy.cpp  WStringProxy.h
DDLReader/res/: DDLReader.rc2
GAME/: AUTOMAP.C  BUILDER.C  CHARGEN2.C  CLK_MAP.C  CRC.C  DIALOGY.C  DLGLIB.C  DUMP.C  ENEMY.C  ENGINE1.C  ENGINE1.H  GAMESAVE.C  GLOBALS.H  GLOBMAP.C  INTERFAC.C  INV.C  KNIHA.C  KOUZLA.C  MACROS.C  MENU.C  REALGAME.C  SERIAL.C  SETUP.C  SKELDAL.C  SNDandMUS.C  SOUBOJE.C  SPECPROC.C  SPECPROC.H  TRANSAV.C  WIZARD.C  engine2.c  extras.h  version.h
GIF/: Decoder.c  Errs.h  GIF.H  GIF2.C  GIF2XED.C  Gif.c
INST/: SETUP.C  SETUP.H  SETUPCPY.C  SETUPLIB.C  SETUPLIB.H  SETVIDEO.C  STUB.C
LIBS/: BASICOBJ.H  BGRAPH.H  BLDICONS.C  BMOUSE.H  BMP2HI.C  Bgraph2.c  DOSERR.ASM  ERRTEST.C  EVENT.C  GRAPHTST.C  GUI.C  GUI.H  LEX_LIB.C  MEMMAN.H  MGFPLAY.C  MGIFMEM.C  MGIFMEM.H  MGIFPLAYA.C  MOUSE.C  PADY.C  PCSPEAK.H  PCX.C  PCX.H  STRLITE.C  TESTSVGA.C  TYPES.H  WAV.C  WAV.H  ZVUK.C  mgifmapmem.c
MAPS/: CDIALOGY.C  DLGPRINT.C  DUMP.C  DUMP.H  EDIT_MAP.C  EDIT_MAP.H  GLOBALS.H  ITEMS.C  ITEMS2.C  MAPEDIT.C  MAPY.C  MAPY.H  MOB_EDIT.C  MOB_EDIT.H  PCXVIEW.C  SAVE_MAP.C  SAVE_MAP.H  STENY.C  STENY.H  WIN_TEST.C  WIZ_TOOL.C  WIZ_TOOL.H
PCX/: 3DMAN.C  PCX.C  PCX.H  PCXTST.C  PODLAHY.C
UTILS/: ITEMLIST.C
UTILS/Podlahar/: Podlahar.cpp  Podlahar.h  Podlahar.rc  Podlahar.vcproj  PodlaharDlg.cpp  PodlaharDlg.h  Resource.h  stdafx.cpp
VIDEO/: ANIPACK.ASM  ANIPACK.H  BITLINE.ASM  BITLINE.H  CINEMA.H  CNMBUILD.C  CNMCONTR.C  FLC.C  FLC.H  FLC2MGIF.C  JPEGMGFA.ASM  JPEGMGIF.C  JPEGMGIF.H  JPEG_SIM.C  LZW.C  LZW.H  LZWA.ASM  LZWC.C  LZW_EX.C  MGFPLAYA.ASM  MGFSOUND.C  MGIF.C  MGIF98.C  MGIFCAT.C  MGIFEACT.C  MGIFEACT.H  MGIFEBLD.C  MGIFEBLD.H  MGIFEDIT.C  MGIFEDIT.H  MGIFEOBJ.C  MGIFEOBJ.H  MGIFPLAY.C  PCX2MGIF.C  PLAYCNM.C  VIDEO.C
VIDEO/FLC/: FLC.H  PLAY.C
VIDEO/OLD/: MGIFMEM.C  MGIFMEM.H
Windows/: BGraph2Dx.cpp  BGraph2Dx.h  FCS_Tasker.c  FCS_Tasker.h  Music.cpp  Music.h  Skeldal.rc  StdAfx.cpp  StdAfx.h  WAInputPlugin.cpp  WAInputPlugin.h  WAPlayer.cpp  WAPlayer.h  WaveOut.cpp  WaveOut.h  WinAmpInterface.cpp  debug.h  extras.rtf  fiber_task.h  install.cpp  install.h  konfig.cpp  resource.h  richview.cpp  skeldal_win.c  skeldal_win.h  uvodni.cpp  uvodni.h  wa_ipc.h  zvuk_win.cpp
ZVUK/: DOSMEM.H  EXAMPLE.ASM  FLC.C  SNDPACK.C  SPK_TEST.C  TRACK.C  ZVUK1.C  ZVUK1A.ASM  ZVUK2A.ASM  zvuk_dx.cpp
ZVUK/ANALYSE/: DOSMEM.C  FLC.C  FLC.H  VESA_.ASM
data/maps/: BILA_VEZ.MAP
game/: CMakeLists.txt  ach_events.c  ach_events.h  advconfig.c  advconfig.h  automap.c  builder.c  chargen.c  chargen2.c  clk_map.c  console.c  crc.c  default_font.h  default_font.in.cpp  default_font_to_cpp.cmake  dialogy.c  dlglib.c  dump.cpp  encrypt.c  enemy.c  engine1.c  engine1.h  engine2.asm  engine2.c  extras.h  gamesave.c  gen_stringtable.c  globals.h  globmap.c  interfac.c  inv.c  kniha.c  kouzla.c  lang.c  lang.h  macros.c  menu.c  realgame.c  resources.h  resources.in.cpp  (+14 more)
insteng/: SETUP.C  SETUP.H  SETUPCPY.C  SETUPCPY.H  SETUPLIB.C  SETVIDEO.C  SETVIDEO.H  TEXTLIB.ASM
lang/en/: book.txt  dialogs.csv  dialogs.xlsx  end_titles.txt  epilog.txt  intro.csv  items.csv  map_BILA_VEZ.csv  map_JESKYNE.csv  map_LESDRIAD.csv  map_LESPRED.csv  map_LESZA.csv  map_NEVIDITE.csv  map_PODZEMI.csv  map_PRISTAV.csv  map_SKELDAL.csv  map_SKRETI.csv  map_SOPKA.csv  map_VET_HORA.csv  mapnames.csv  shops.csv  spells.csv  ui.csv
libs/: CMakeLists.txt  addtext.c  advinst.c  base64.h  basicobj.c  basicobj.h  bgraph.c  bgraph.h  bgraph1.asm  bgraph2.c  bgraph2a.asm  bgraph2a.c  bgraph2a.cpp  bldicons.c  bmouse.c  bmouse.h  bmp2hi.c  cspells.c  csv.hpp  cztable.c  cztable.h  devices.c  devices.h  doserr.h  engine1.c  engine2.asm  errtest.c  event.c  event.h  event_macros.h  expand.c  extract.c  fastload.c  file_to_base64.cpp  gui.c  gui.h  inicfg.c  inicfg.h  lex_lib.c  logfile.h  (+39 more)
mapedit/CDialogy/: CDialogy.vcproj
mapedit/CSpells/: CSpells.cpp  CSpells.vcproj  stdafx.cpp
mapedit/ColEdit/: ColEdit.cpp  ColEdit.h  ColEdit.rc  (+11 more)
platform/: BGraph2Dx.h  CMakeLists.txt  FCS_Tasker.h  achievements.cpp  achievements.h  config.cpp  config.h  error.cpp  error.h  file_access.cpp  getopt.h  int2ascii.c  istr.c  legacy_coroutines.cpp  legacy_coroutines.h  mem.h  mtqueue.cpp  mtqueue.h  platform.cpp  platform.h  save_folder.h  seh.h  skeldal_win.h  sound.h  sse_receiver.c  sse_receiver.cpp  sse_receiver.h  timer.cpp  timer.h  ugc.cpp  ugc.h
platform/linux/: CMakeLists.txt  app_start.cpp  map_file.cpp  map_file.h  save_folder.cpp  skeldal.sh  timer.cpp
platform/mac_os/: save_folder.cpp
platform/sdl/: BGraph2.cpp  BGraph2.h  CMakeLists.txt  format_mapping.h  global_context.h  input.cpp  input.h  keyboard_map.h  sdl_context.cpp  sdl_context.h  sound.cpp  sound.h  sound_filter.cpp  sound_filter.h  sound_mixer.h  unique_value.h  wave_mixer.h  wave_source.h
platform/sdl/tests/: CMakeLists.txt  sdl_fullscreen_window.cpp  sdl_minimal_test.cpp  sdl_mouse.cpp  sdl_surface_test.cpp  sdl_update_texture.cpp
platform/windows/: app_start.cpp  map_file.cpp  map_file.h  minidump.cpp  minidump.h  save_folder.cpp  todo.txt
release/: crashdump.dmp
tools/: CMakeLists.txt  ddl_ar.cpp  ddl_ar_class.cpp  ddl_ar_class.h  deenc.c  pcx_diff_tool.c
(+77 files in other folders)
